tests/inexact_to_indexed/inexact_to_indexed.exp
Error ------------------------------------------------------------------------------------------------------ test.js:8:2

Cannot cast `x` to `X` because an unknown property that may exist on the inexact object type [1] is incompatible with
number [2]. [incompatible-cast]

   test.js:8:2
   8| (x: X); // Error, inexact objects are incompatible with indexed objects
       ^ [1]

References:
   test.js:3:13
   3|   [string]: number,
                  ^^^^^^ [2]



Found 1 error
